# django-auth-framework

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
auth_framework/: __init__.py  abstract_models.py  admin.py  apps.py  exceptions.py  models.py  permissions.py  settings.py  tasks.py  urls.py  utils.py
auth_framework/backends/: auth_backends.py
auth_framework/migrations/: 0001_initial.py
auth_framework/oauth/: oauth2_backends.py  oauth2_validators.py  serializers.py  urls.py  utils.py  views.py
auth_framework/serializers/: account_serializers.py  mixin_serializers.py  password_serializers.py  signup_serializers.py
auth_framework/signals/: __init__.py  handler.py
auth_framework/social/: serializers.py  urls.py  views.py
auth_framework/social/providers/: abstract_adapter.py
auth_framework/social/providers/apple/: adapter.py
auth_framework/social/providers/facebook/: adapter.py
auth_framework/social/providers/google/: adapter.py
auth_framework/templates/auth/: email_pin.txt  email_reset_link.txt
auth_framework/views/: account_views.py  password_views.py  session_views.py
tests/: conftest.py  test_account.py  test_oauth.py  test_social.py
