
[tool.poetry]
name = "django-auth-framework"
version = "1.0.3"
description = "An open source, one-stop authentication framework for Django and ready for production."
authors = ["Edward Chai <edwardc@acrossor.com>"]
packages = [
    { include = "auth_framework" },
]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/DrChai/django-auth-framework"
homepage = "https://github.com/DrChai/django-auth-framework"
classifiers = [
    "Development Status :: 5 - Production/Stable",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Framework :: Django :: 2.2",
	"Framework :: Django :: 3.1",
	"Framework :: Django :: 3.2",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Topic :: Internet :: WWW/HTTP"
]
[tool.poetry.dependencies]
python = "^3.5"
django = ">= 2.2.0"
requests = "*"
django-oauth-toolkit = "^1.5.0"
djangorestframework = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
