[metadata]
name = django-auth-framework
version = 2.0.1
description = An open source, one-stop authentication framework for Django and ready for production.
long_description = file: README.md
long_description_content_type = text/markdown
author = Edward Chai
author_email = edwardc@acrossor.com
url = https://github.com/DrChai/django-auth-framework
keywords = django, oauth, oauth2, restful, api, microservice
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	django >= 2.2
	djangorestframework>=3.11.0
	django-oauth-toolkit>=2.0.0
	requests

[options.packages.find]
exclude = tests